--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\DEll\\.m2\\repository\\org\\springframework\\spring-context\\4.2.2.RELEASE\\spring-context-4.2.2.RELEASE.jar","type":"JAR","hints":{}},"ABSENT"]]
+[[{"location":"D:\\JDK1.8","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"J2SE-1.5"}},"jre:jre:1.5.0"]]
