--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"D:\\JDK1.8","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"J2SE-1.5"}},"jre:jre:1.5.0"]]
+[[{"location":"C:\\Users\\DEll\\.m2\\repository\\javax\\servlet\\servlet-api\\3.0-alpha-1\\servlet-api-3.0-alpha-1.jar","type":"JAR","hints":{}},"javax.servlet:servlet-api:3.0.0"]]
