--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"E:\\work_java\\java_review","type":"PROJECT","hints":{"PROJECT_NAME":"java_review"}},"ABSENT"],[{"location":"D:\\JDK1.8","type":"JRE","hints":{}},"jre:jre:1.8.0"]]
